# foundry-test-task

./: .gitignore  README.md
api/: .env  Cargo.toml
api/run-scripts/: collect-erc20.sh  collect-eth.sh  disperse-erc20.sh  disperse-eth.sh
api/src/: config.rs  lib.rs  main.rs  routes.rs  state.rs  types.rs
api/src/handlers/: collect.rs  disperse.rs  mod.rs  services.rs
contracts/: foundry.toml
contracts/script/: Collect.sol  Disperse.sol  TestToken.sol
contracts/src/: BaseContract.sol  Collect.sol  Disperse.sol  TestToken.sol
contracts/test/: CollectERC20.t.sol  CollectETH.t.sol  DisperseETH.t.sol  DispreseERC20.t.sol
