[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version= "1", features = ["full"] }
tower = "0.4"
ethers = "2.0.14"
ethers-providers = "2.0.14"
dotenvy = "0.15.7"
config = "0.14.0"
anyhow = "1.0.86"
url = { version = "2.5.2", features = ["serde"] }
derive-getters = "0.5.0"
eyre = "0.6.12"
secp256k1 = { version = "0.20.3", features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
tracing = "0.1.37"
alloy = { version = "0.2.1", features = ["full", "serde", "json-rpc"] }
